--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@react-three/drei": "^9.93.1",
     "@react-three/fiber": "^8.15.14",
+    "@sanity/client": "^6.18.0",
     "@types/three": "^0.160.0",
     "material-symbols": "^0.14.4",
-    "next": "14.0.4",
+    "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.160.0"
